tab alignment fix

--- a/app/root.module.css
+++ b/app/root.module.css
@@ -170,9 +170,9 @@
     .tab{
         /* width: 100%; */
         margin: 0px;
-        padding: 25px 5px;
+        padding: 25px 10px;
         border-radius: 0;
-        gap: 5px;
+        gap: 10px;
         .sectionTags{
             gap: 0;
             justify-content: space-between;
